--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   firebase_core: ^2.23.0
   flutter_screenutil: ^5.9.0
   lottie: ^2.7.0
+  firebase_auth: ^4.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
