--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   flutter_screenutil: ^5.9.0
   lottie: ^2.7.0
   firebase_auth: ^4.15.0
+  firebase_database: ^10.3.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
